fixed the collapsable and the topbar

--- a/search/style.css
+++ b/search/style.css
@@ -5,28 +5,53 @@
     padding: 10px 14px;
     text-decoration: none;
     font-size: 13px;
+    position: sticky;
+    justify-content: space-between;
+    height: 60px;
+    top: 0;
+}
+
+.topnav {
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    position: sticky;
+    justify-content: space-between;
+    height: 60px;
+    top: 0;
+}
+
+.topnav a:hover {
+    text-decoration-line: underline;
 }
 
 .nav-left {
     margin: 0px 30px;
-
     overflow: hidden;
     display: flex;
     align-items: center;
 }
 
-
-#searchInput {
-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-border-radius: 25px;
-padding: 20px;
-width: 500px;
-height: 10px;
-border-style: hidden;
-display: block;
-margin: 0 auto;
+.topnav a {
+    float: left;
+    color: #000000;
+    text-align: center;
+    padding: 10px 14px;
+    text-decoration: none;
+    font-size: 13px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
+#searchInput {
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+    border-radius: 25px;
+    padding: 20px;
+    width: 500px;
+    height: 10px;
+    border-style: hidden;
+    display: block;
+    margin: 0 auto;
+}
 
 .search:hover #searchInput {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -34,9 +59,8 @@ margin: 0 auto;
 }
 
 #searchInput:focus {
-
-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-outline: none;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    outline: none;
 
 }
 
@@ -56,10 +80,8 @@ outline: none;
     border-width: 1px;
     border-color: #F8F9FA;
 
-
 }
 .box:hover {
-
     border-color: #DADCE0;
 
 }
@@ -72,11 +94,11 @@ outline: none;
     width: 250px;
     height: 400px;
     border-radius: 35px;
+      display: none;
 
 }
 
 .icon {
-
     border-radius: 10px;
     padding: 20px;
     font-size: 30px;
